# CPSC-370_BTC_derivates_AI_Chapman

./: .aider.chat.history.md  .aider.input.history  .envrc  .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  matchmaking.ts  new_file.py  package.json
# new_file: crypto_swap/: main.py  swap.py  wallet.py
.aider.ident.cache.v1/: cache.db
.aider.tags.cache.v1/: cache.db
.aider.tags.cache.v3/: cache.db
Dating-DApp/: data_ideation.excalidraw  matchmaking.ts  mission_stmt.md  mvp.md  package-lock.json  package.json  script.ts  software_coding_practices.md
assignments/: 12_Oct_2023.md  19_Oct_2023.md  21_Sept_2023.md  26_Oct_2023.md  28_Sept_2023.md  (+3 more)
workspaces/rgb/: .aider.chat.history.md  .aider.input.history  .gitignore  Cargo.toml  lecture_notes.md  loyalty_points.rs  package-lock.json  package.json  rgb_example.ts
workspaces/rgb/.aider.tags.cache.v3/: cache.db
workspaces/rgb/contracts/: rgb20-token.contract.rgb  rgb20-token.contract.rgba
workspaces/rgb/rgb20-token/: .aider.chat.history.md  .aider.conf.yml  .aider.input.history  Cargo.toml  customRGB20xface.rs
workspaces/rgb/rgb20-token/.aider.tags.cache.v3/: cache.db
workspaces/rgb/rgb20-token/contracts/: rgb20-token.contract.rgb  rgb20-token.contract.rgba
workspaces/rgb/rgb20-token/src/: main.rs
workspaces/rgb/rgb20-token/src/schema/: custom_state.rs  token_schema.rs
workspaces/rgb20-token/: Cargo.toml
workspaces/rgb20-token/contracts/: rgb20-token.contract.rgb  rgb20-token.contract.rgba
workspaces/rgb20-token/src/: custom_schema.rs  lib.rs  macros.rs  main.rs  schema.rs
(+331 files in other folders)
