[package]
name = "rgb20-token"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rgb20-token"
path = "src/main.rs"

[dependencies]
amplify = "4.0.1"
strict_encoding = "2.5.0"
strict_types = "1.6.1"
bp-core = "0.10.9"
rgb-std = { version = "0.10.8", features = ["serde", "fs"] }
serde = "1.0.152"
serde_json = "1.0.93"
rgb-schemata = "0.10.0"
